--- a/Basics of LangGraph/Chatbot using LangGraph.ipynb
+++ b/Basics of LangGraph/Chatbot using LangGraph.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "id": "c0287d0d",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 30,
    "id": "1f93dbda",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 31,
    "id": "8de0c787",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 32,
    "id": "1e272b40",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 33,
    "id": "a31fdabf",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 34,
    "id": "ec275d5c",
    "metadata": {},
    "outputs": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 35,
    "id": "d4b2b672",
    "metadata": {},
    "outputs": [
@@ -110,30 +110,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MS Dhoni is a legendary Indian cricketer, widely regarded as one of the greatest captains and wicket-keeper batsmen of all time.\n",
+      "MS Dhoni is a legendary **Indian former international cricketer** who is widely regarded as one of the greatest captains, wicket-keeper batsmen, and finishers in the history of the sport.\n",
       "\n",
-      "Here's a breakdown of who he is and why he's so significant:\n",
+      "Here are some key aspects of his career and legacy:\n",
       "\n",
-      "**Key Highlights of his Career:**\n",
+      "*   **Captain Fantastic:** He is most famous for his incredibly successful captaincy of the Indian cricket team across all three formats (Test, One Day International (ODI), and Twenty20 International (T20I)). Under his leadership, India achieved unprecedented success, including:\n",
+      "    *   **ICC T20 World Cup 2007:** A historic victory in the inaugural T20 World Cup, which marked a turning point for Indian cricket and the T20 format.\n",
+      "    *   **ICC Cricket World Cup 2011:** Leading India to their second ODI World Cup title after a 28-year drought, a moment of immense national pride.\n",
+      "    *   **ICC Champions Trophy 2013:** Making India the only nation to win all three major ICC limited-overs tournaments.\n",
+      "    *   **ICC Test Mace:** India also reached the No. 1 ranking in Test cricket under his captaincy.\n",
       "\n",
-      "*   **Captain Marvel:** He is most famous for his incredibly successful captaincy of the Indian national team across all three formats of the game (Test, One Day International (ODI), and Twenty20 International (T20I)). Under his leadership, India achieved unprecedented success:\n",
-      "    *   **2007 ICC World Twenty20:** Led India to victory in the inaugural T20 World Cup.\n",
-      "    *   **2011 ICC Cricket World Cup:** Captained India to their second ODI World Cup title, a historic win on home soil after a 28-year drought.\n",
-      "    *   **2013 ICC Champions Trophy:** Led India to win this prestigious ODI tournament.\n",
-      "    *   **No. 1 Test Ranking:** Guided India to the top of the ICC Test rankings for the first time.\n",
-      "*   **Master Wicket-keeper:** He was an exceptional wicket-keeper, known for his lightning-fast stumpings and agile catching.\n",
-      "*   **Explosive Finisher:** Dhoni was renowned for his \"finishing\" abilities in ODIs and T20Is. He had an uncanny knack for staying calm under pressure and hitting the winning runs, often with powerful sixes. His helicopter shot became iconic.\n",
-      "*   **Calm Demeanor:** He was known for his incredibly calm and composed approach on the field, earning him the nickname \"Captain Cool.\" This temperament was crucial in guiding his team through tense situations.\n",
-      "*   **Prolific Batsman:** While his captaincy and keeping were standout features, he was also a very effective middle-order batsman, accumulating a significant number of runs in all formats.\n",
-      "*   **Long and Illustrious Career:** He had a career spanning over 15 years, retiring from international cricket in August 2020.\n",
+      "*   **Master Finisher:** Dhoni was renowned for his exceptional ability to finish matches, especially in ODIs. He had an uncanny calmness under pressure and a knack for hitting the winning runs, often with his signature helicopter shot.\n",
       "\n",
-      "**Beyond Cricket:**\n",
+      "*   **Wicket-keeper Batsman:** As a wicket-keeper, he was agile and efficient, taking numerous catches and executing quick stumpings. As a batsman, he was known for his unorthodox yet effective technique, powerful hitting, and incredible temperament.\n",
       "\n",
-      "*   **Indian Army:** Dhoni holds an honorary rank of Lieutenant Colonel in the Indian Territorial Army.\n",
-      "*   **Business Ventures:** He has been involved in various business ventures and endorsements.\n",
-      "*   **Inspiration:** He is an inspiration to millions of aspiring cricketers and people across India and the world, known for his hard work, dedication, and humility.\n",
+      "*   **\"Captain Cool\":** This nickname perfectly encapsulates his composed and unflappable demeanor, even in the most high-pressure situations. He rarely showed outward emotion and always made rational decisions.\n",
       "\n",
-      "**In essence, MS Dhoni is a cricketing icon who redefined leadership in Indian cricket and left an indelible mark on the sport with his exceptional skills, strategic mind, and unwavering composure.**\n"
+      "*   **Influence and Legacy:** Dhoni's impact extends far beyond statistics. He inspired a generation of cricketers and fans with his leadership, humility, and dedication. He revolutionized the role of a captain and a wicket-keeper batsman in India.\n",
+      "\n",
+      "*   **Post-Retirement:** After retiring from international cricket in 2020, he continued to play in the Indian Premier League (IPL) for the Chennai Super Kings (CSK), leading them to multiple titles as well. He remains a highly respected and influential figure in Indian cricket.\n",
+      "\n",
+      "In short, MS Dhoni is a cricketing icon who etched his name in history through his extraordinary leadership, exceptional skills, and unwavering composure.\n"
      ]
     }
    ],
@@ -144,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "3895b2f3",
    "metadata": {},
    "outputs": [
@@ -152,23 +149,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "User: Hi\n",
-      "Assistant: Hello! How can I help you today?\n",
-      "User: what is the date today?\n",
-      "Assistant: I am a large language model, I do not have access to the current date or time.\n",
-      "User: ok\n",
-      "Assistant: Alright! What's on your mind? How can I help you today? 😊\n",
-      "User: whta is the capital of germany?\n",
-      "Assistant: The capital of Germany is **Berlin**.\n",
-      "User: How to say good evening in german?\n",
-      "Assistant: The most common way to say \"good evening\" in German is:\n",
-      "\n",
-      "**Guten Abend**\n",
-      "\n",
-      "* **Guten** means \"good\"\n",
-      "* **Abend** means \"evening\"\n",
-      "\n",
-      "You can pronounce it roughly as: **GOO-ten AH-bent**\n",
+      "User: hi\n",
+      "Assistant: Hi there! How can I help you today?\n",
+      "User: What is the capital of france?\n",
+      "Assistant: The capital of France is **Paris**.\n",
+      "User: What the date today?\n",
+      "Assistant: I am a large language model, I do not have access to real-time information including the current date.\n",
       "User: q\n",
       "Good Bye\n"
      ]
